# appsec_ai_validator

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_sample.bat  run_sample.sh
app/: cli.py
app/agents/: validator_agent.py
app/analyzers/: command_injection_analyzer.py  sanitizer_detector.py  source_sink_analyzer.py  sqli_analyzer.py  ssrf_analyzer.py
app/models/: finding.py  report.py
app/parsers/: findings_parser.py  python_ast_parser.py
app/services/: report_service.py  validation_service.py
app/utils/: file_loader.py
sample/: extra_case_01.py  extra_case_02.py  extra_findings.json  findings.json  sample.py
tests/: test_validation.py
