[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appsec-ai-validator"
version = "0.1.0"
description = "AI-assisted static validation for Python security findings"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Jorge Angarita"}
]
dependencies = [
  "jinja2>=3.1.0",
  "pydantic>=2.6.0",
  "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
appsec-validate = "app.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
